Correct Plotdecks visibility

--- a/styles/main.css
+++ b/styles/main.css
@@ -112,18 +112,21 @@ html body {
 .checkbox.darkillusions,
 .checkbox.dragonsgreed,
 .checkbox.endlessthirst,
+.checkbox.eternalagony,
+.checkbox.firstlegion,
 .checkbox.goblinuprising,
 .checkbox.hybridloyalty,
 .checkbox.innercorruption,
 .checkbox.raginginfection,
 .checkbox.seedsofbetrayal,
 .checkbox.silentprotector,
-.checkbox.skullduggery,
+.checkbox.skulduggery,
 .checkbox.tangledweb,
 .checkbox.thefallenelite,
 .checkbox.twistedsoul,
 .checkbox.unseenlegions,
 .checkbox.unstableforces,
+.checkbox.vitalessence,
 .skills-container .select-hybrid-class.monk,
 .skills-container .select-hybrid-class.battlemage,
 .skills-container .select-hybrid-class.watchman,
@@ -188,18 +191,21 @@ html body {
 .showplot.darkillusions .checkbox.darkillusions,
 .showplot.dragonsgreed .checkbox.dragonsgreed,
 .showplot.endlessthirst .checkbox.endlessthirst,
+.showplot.eternalagony .checkbox.eternalagony,
+.showplot.firstlegion .checkbox.firstlegion,
 .showplot.goblinuprising .checkbox.goblinuprising,
 .showplot.hybridloyalty .checkbox.hybridloyalty,
 .showplot.innercorruption .checkbox.innercorruption,
 .showplot.raginginfection .checkbox.raginginfection,
 .showplot.seedsofbetrayal .checkbox.seedsofbetrayal,
 .showplot.silentprotector .checkbox.silentprotector,
-.showplot.skullduggery .checkbox.skullduggery,
+.showplot.skulduggery .checkbox.skulduggery,
 .showplot.tangledweb .checkbox.tangledweb,
 .showplot.thefallenelite .checkbox.thefallenelite,
 .showplot.twistedsoul .checkbox.twistedsoul,
 .showplot.unseenlegions .checkbox.unseenlegions,
 .showplot.unstableforces .checkbox.unstableforces,
+.showplot.vitalessence .checkbox.vitalessence,
 .showclass.apothecary .checkbox.apothecary,
 .showclass.disciple .checkbox.disciple,
 .showclass.prophet .checkbox.prophet,
